# Electrophysiology

./: README.md  nano
Cell-Model-Solver-v3/: .gitignore  CMakeLists.txt  ToDo  algebraic.txt  clean_project.sh  constants.txt  rates.txt  recompile_project.sh  states.txt  teste.c
Cell-Model-Solver-v3/examples/: beeler-reuter-1977.ini  beeler_reuter_1977.ini  difrancesco_1985.ini  mitchell-shaeffer-2003.ini  mitchell-shaeffer.ini  noble-1962.ini  stewart_aslanidi_noble_2009.ini  ten_tusscher_2006.ini
Cell-Model-Solver-v3/examples_configs/: li_rudy_2011.ini  noble-1962.ini  stewart_aslanidi_noble_2009.ini  ten_tusscher_2006.ini  ten_tusscher_3_fig4b.ini  ten_tusscher_endo_2004.ini
Cell-Model-Solver-v3/results/: calc_apd.py  noble-100ms  noble-120ms  noble-130ms  noble-160ms  noble-180ms  noble-200ms  noble-220ms  noble-240ms  noble-260ms  noble-280ms  noble-300ms  noble-80ms
Cell-Model-Solver-v3/results/bcl-apd/: bcl_apd_plot.py
Cell-Model-Solver-v3/save_states/: arpf-20000ms.txt  difrancesco-5700ms.txt  noble-15000ms.txt  noble-2700ms.txt  tt3-endo-12000ms.txt  tt3-endo-6000ms.txt  tt3-fig4b-inaca-100-12000ms.txt  tt3-fig4b-inaca-100-full-fibrotic-12000ms  tt3-fig4b-inaca-60-12000ms.txt  tt3-fig4b-inaca-60-full-fibrotic-12000ms
Cell-Model-Solver-v3/scripts/: calc_apd.py  plot_ap.py  plot_multiple_ap.py  plot_solution.sh
Cell-Model-Solver-v3/src/: main.c
Cell-Model-Solver-v3/src/ini_parser/: ini_file_sections.h
Cell-Model-Solver-v3/src/libraries_common/: config_helpers.h
Cell-Model-Solver-v3/src/models_library/: CMakeLists.txt  beeler_reuter_1977.c  beeler_reuter_1977.h  difrancesco_1985.c  difrancesco_1985.h  li_rudy_2011.c  li_rudy_2011.h  mitchell_shaeffer.c  mitchell_shaeffer_2003.c  mitchell_shaeffer_2003.h  model_common.h  noble_1962.c  noble_1962.h  stewart_aslanidi_noble_2009.c  stewart_aslanidi_noble_2009.h  ten_tusscher_2006.c  ten_tusscher_2006.h  ten_tusscher_3_Fig4b.c  ten_tusscher_3_Fig4b.h  ten_tusscher_endo_2004.c  ten_tusscher_endo_2004.h
Cell-Model-Solver-v3/src/solver/: CMakeLists.txt  constants.h  ode_solver.c  ode_solver.h
Cell-Model-Solver-v3/src/stimuli_library/: CMakeLists.txt  stimuli.c
Cell-Model-Solver-v3/src/utils/: CMakeLists.txt  logfile_utils.c
Fenton-Experiment/: .gitignore  CMakeLists.txt  ToDo  cable-3_bcl-175.sst  cable-4.5_bcl-170.sst  clear_examples.sh  clear_simulation.sh  clear_steady_states.sh  create_folders.sh  output.sst  run_experiment-1.sh  run_experiment-2.sh  run_experiment-3.sh  run_simulation.sh  run_valgrind.sh
Fenton-Experiment/examples/: test_sample.ini
Fenton-Experiment/examples/experiment-1/: cable-10000.0um-sigma-0.000100.ini  cable-10000.0um-sigma-0.000500.ini  cable-10000.0um-sigma-0.000600.ini  cable-10000.0um-sigma-0.000800.ini  cable-10000.0um-sigma-0.000900.ini  cable-15000.0um-sigma-0.000100.ini  cable-15000.0um-sigma-0.000400.ini  cable-15000.0um-sigma-0.000500.ini  cable-20000.0um-sigma-0.000800.ini  cable-25000.0um-sigma-0.000300.ini  cable-25000.0um-sigma-0.000500.ini  cable-30000.0um-sigma-0.000700.ini  cable-30000.0um-sigma-0.000900.ini  cable-35000.0um-sigma-0.000500.ini  cable-35000.0um-sigma-0.000700.ini  cable-40000.0um-sigma-0.000100.ini  cable-40000.0um-sigma-0.000300.ini  cable-40000.0um-sigma-0.000500.ini  cable-40000.0um-sigma-0.000800.ini  cable-45000.0um-sigma-0.000400.ini  cable-45000.0um-sigma-0.000800.ini  cable-50000.0um-sigma-0.000400.ini  cable-50000.0um-sigma-0.000600.ini  sst-cable-10000.0um-sigma-0.000200.ini  sst-cable-10000.0um-sigma-0.000600.ini  sst-cable-10000.0um-sigma-0.000800.ini  sst-cable-10000.0um-sigma-0.000900.ini  sst-cable-15000.0um-sigma-0.000100.ini  sst-cable-15000.0um-sigma-0.000500.ini  sst-cable-15000.0um-sigma-0.000600.ini  sst-cable-15000.0um-sigma-0.000700.ini  sst-cable-15000.0um-sigma-0.000800.ini  sst-cable-20000.0um-sigma-0.000300.ini  sst-cable-20000.0um-sigma-0.000400.ini  sst-cable-20000.0um-sigma-0.000900.ini  sst-cable-25000.0um-sigma-0.000100.ini  sst-cable-25000.0um-sigma-0.000300.ini  sst-cable-25000.0um-sigma-0.000400.ini  sst-cable-25000.0um-sigma-0.000900.ini  sst-cable-35000.0um-sigma-0.000800.ini  (+9 more)
Fenton-Experiment/examples/experiment-2/: cable-1.5_bcl-150.ini  cable-1.5_bcl-155.ini  cable-1.5_bcl-160.ini  cable-1.5_bcl-165.ini  cable-1.5_bcl-170.ini  cable-1.5_bcl-175.ini  cable-1.5_bcl-180.ini  cable-1.5_bcl-185.ini  cable-1.5_bcl-190.ini  cable-1.5_bcl-195.ini  cable-1.5_bcl-200.ini  cable-1.5_bcl-205.ini  cable-1.5_bcl-210.ini  cable-1.5_bcl-215.ini  cable-1.5_bcl-220.ini  cable-1.5_bcl-225.ini  cable-1.5_bcl-230.ini  cable-1.5_bcl-235.ini  cable-1.5_bcl-240.ini  cable-1.5_bcl-245.ini  cable-1.5_bcl-250.ini  cable-1.5_bcl-255.ini  cable-1.5_bcl-260.ini  cable-1.5_bcl-265.ini  cable-1.5_bcl-270.ini  cable-1.5_bcl-275.ini  cable-1.5_bcl-280.ini  cable-1_bcl-150.ini  cable-1_bcl-155.ini  cable-1_bcl-160.ini  cable-1_bcl-165.ini  cable-1_bcl-170.ini  cable-1_bcl-175.ini  cable-1_bcl-180.ini  cable-1_bcl-185.ini  cable-1_bcl-190.ini  cable-1_bcl-195.ini  cable-1_bcl-200.ini  cable-1_bcl-205.ini  cable-1_bcl-210.ini  (+446 more)
Fenton-Experiment/examples/experiment-3/: cable-1.5_bcl-150.ini  cable-1.5_bcl-155.ini  cable-1.5_bcl-160.ini  cable-1.5_bcl-165.ini  cable-1.5_bcl-170.ini  cable-1.5_bcl-175.ini  cable-1.5_bcl-180.ini  cable-1.5_bcl-185.ini  cable-1.5_bcl-190.ini  cable-1.5_bcl-195.ini  cable-1.5_bcl-200.ini  cable-1.5_bcl-205.ini  cable-1.5_bcl-210.ini  (+473 more)
Fenton-Experiment/scripts/: calc_alternans_type.py  calc_apd_bcl_diagram.py  calc_apd_elnaz.py  calc_apd_single.py  calc_conductivity_combinations.py  calc_offset.py  calc_propagation_velocity.py  gaussian.py  plot_all_regime.py  plot_regime.py
Fenton-Experiment/src/: main.cpp
LiRudy/: PRd.c  (+2 more)
MonodomainFiniteDifference1D/: .gitignore  CMakeLists.txt  ToDo  clear_results.sh  clear_vtk.sh  output.sst
MonodomainFiniteDifference1D/include/: config.h  monodomain.h  plot.h  stimuli.h
MonodomainFiniteDifference1D/scripts/: calc_apd_bcl_diagram.py  calc_apd_di.py
MonodomainFiniteDifference1D/src/: celular_model.cpp  config.cpp  main.cpp  monodomain.cpp  stimuli.cpp  utils.cpp
(+5118 files in other folders)
